--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "StockStalk",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "author": "FOO BAR",
   "private": true,
   "description": "Your stocks on your desktop",
   "license": "MIT",
   "main": "build/electron-starter.js",
+  "repository": "github:sagivo/StockStalk",
   "homepage": "./",
   "dependencies": {
     "electron-context-menu": "*",
@@ -59,8 +60,7 @@
   "build": {
     "publish": [
       {
-        "provider": "s3",
-        "bucket": "stockstalk"
+        "provider": "github"
       }
     ],
     "mac": {
