--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "StockStalk",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "author": "FOO BAR",
   "private": true,
   "description": "Your stocks on your desktop",
   "license": "MIT",
-  "main": "build/electron-starter.js",
+  "main": "public/electron-starter.js",
   "repository": "github:sagivo/StockStalk",
   "homepage": "./",
   "dependencies": {
